--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -21,7 +21,7 @@ dockers:
     goos: linux
     goarch: amd64
     image_templates:
-      - "gcr.io/pidrakin/redirector:latest"
+      - "ghcr.io/pidrakin/redirector:latest"
     dockerfile: Containerfile
 release:
   mode: replace
