--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -27,6 +27,8 @@ jobs:
         uses: crazy-max/ghaction-upx@v3
         with:
           install-only: true
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
